# dart

./: .gitignore  Cargo.toml  README.md  train_cloud.py  train_watchdog.ps1  train_watchdog.sh
docs/: food101-report.md  imagenet-report.md  training-report.md
eval/: fid.py
scripts/: download_imagenet.py  strip_compile_prefix.py
src/: lib.rs  main.rs  vae.rs
src/diffusion/: mod.rs  sampling.rs  schedule.rs
src/model/: config.rs  dart.rs  mod.rs  transformer.rs
train/: requirements.txt  train.py
