[package]
name = "dart"
version = "0.1.0"
edition = "2024"
description = "DART: Denoising Autoregressive Transformer for Scalable Text-to-Image Generation"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hf-hub = "0.3"
image = "0.25"

[profile.release]
opt-level = 3
lto = true
